--- a/AbstractFactoryPattern/Main/Include/BUILD
+++ b/AbstractFactoryPattern/Main/Include/BUILD
@@ -9,8 +9,28 @@ load( "@gwrt//Main:gwrt.bzl", "gwrt_library" )
 
 gwrt_library(
     name = "Include",
-    hdrs = [],
-    srcs = [],
+    hdrs = [
+      "ListFactory.hpp",
+      "ListLink.hpp",
+      "ListPage.hpp",
+      "ListTray.hpp",
+      "Factory.hpp",
+      "Link.hpp",
+      "Page.hpp",
+      "Tray.hpp",
+      "Item.hpp"
+    ],
+    srcs = [
+      "ListFactory.cpp",
+      "ListLink.cpp",
+      "ListPage.cpp",
+      "ListTray.cpp",
+      "Factory.cpp",
+      "Link.cpp",
+      "Page.cpp",
+      "Tray.cpp",
+      "Item.cpp"
+    ],
     copts = [],
     deps = [],
 )
