--- a/19.State/Main/Include/BUILD
+++ b/19.State/Main/Include/BUILD
@@ -10,9 +10,19 @@ load( "@gwrt//Main:gwrt.bzl", "gwrt_library" )
 gwrt_library(
     name = "Include",
     # ここにヘッダーファイル名を挿入
-    hdrs = [],
+    hdrs = [
+      "State.hpp",
+      "DayState.hpp",
+      "NightState.hpp",
+      "Context.hpp",
+      "SafeFrame.hpp"
+    ],
     # ここにソースファイル名を挿入
-    srcs = [],
+    srcs = [
+      "DayState.cpp",
+      "NightState.cpp",
+      "SafeFrame.cpp"
+    ],
     copts = [],
     deps = [],
 )
